--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
           export_default_credentials: true
       - name: Authenticate gcloud
         run: |
-          echo "${{ secrets.GCP_CREDENTIALS }}" > key.json
+          printf '%s' "${{ secrets.GCP_CREDENTIALS }}" > key.json
           gcloud auth activate-service-account --key-file=key.json
       - name: Deploy to Google Cloud Run
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
