--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,17 +37,18 @@ jobs:
       - name: Run basic script check (app.py)
         run: |
           python -m py_compile app.py
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
       - name: Set up Cloud SDK
         id: setup-gcloud
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
-          export_default_credentials: true
+        # service_account_key and export_default_credentials are not needed when using auth@v2
       - name: Deploy to Google Cloud Run
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.setup-gcloud.outputs.credentials_file_path }}
         run: |
           gcloud run deploy ${{ secrets.GCP_SERVICE_NAME }} \
             --source . \
